css/queries.css
/* ... */
@media (max-width: 31.25em) {
  .flex-container-footer {
    grid-template-columns: 1fr;
    justify-items: start;
    padding-left: 4.8rem;
  }
  .footer-vruzka-s-nas {
    grid-row: 3;
    justify-self: start;
  }
  .footer-about-us {
    grid-row: 1;
  }
  .footer-links {
    grid-row: 2;
  }
  .logo {
    font-size: 3.2rem;
  }
  .logo-img {
    width: 20rem;
  }
  .btn-mobile-nav ion-icon {
    width: 3.2rem;
    height: 3.2rem;
  }
  .grid-container {
    grid-template-columns: 1fr;
  }
  .adress-title {
    font-size: 2rem;
  }
  .tel-phone:link,
  .tel-phone:visited {
    font-size: 1.8rem;
  }
  .adress-text:link,
  .adress-text:visited {
    font-size: 1.8rem;
  }
}
@media (max-width: 28.125em) {
  .slider {
    width: 45rem;
  }
  .slide {
    width: 45rem;
  }
  .slide > img {
    width: 45rem;
  }
  .image-width {
    width: 45rem !important;
  }
  .img-box-pvc img {
    height: 45rem;
    /* width: auto; */
    width: 40rem;
  }
  .img-box-pvc {
    height: 45rem;
    /* width: auto; */
    width: 40rem;
  }
  .link-botom:visited,
  .link-botom:link {
    font-size: 2rem;
    padding: 2.4rem 4.8rem;
  }
  .img-height-adjust {
    width: 40rem !important;
  }
  .features-container {
    max-width: 50rem;
  }
  .feature-img {
    width: 27rem;
    height: 27rem;
  }
  /* .buttons-tab {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: repeat(2, 1fr);
    justify-items: center;
    align-items: center;
  } */
  .flex-container-choose-us {
    grid-template-columns: 1fr;
    row-gap: 2.4rem;
  }
  .heading-choose-us {
    font-size: 2.4rem;
  }
  .z-img {
    width: 35rem;
    height: auto;
  }
  .text-content {
    padding: 1rem;
  }
  .flex-container-opinions {
    grid-template-columns: 1fr;
  }
  .container-opinions {
    height: 145rem;
  }

  .card {
    grid-template-rows: 35rem 1fr;

    height: auto !important;
    width: 35rem;
    justify-self: center;
    box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.2);
  }
  .card-content {
    padding-left: 3rem;
  }

  .card-img {
    border-bottom-left-radius: unset;
    border-top-right-radius: 11px;
    box-shadow: unset;
    width: 35rem;
    height: 35rem;
  }
  .img-vz {
    max-width: 42.4rem;
    max-height: 36rem;
  }

  .grid-container-sv {
    min-width: 45rem;
    max-width: 45rem;
    min-height: 45rem;
  }
  .featured-in-image {
    height: 2.5rem;
  }
  .container-logos {
    gap: 3.2rem;
  }
  .features-content {
    padding: 3.6rem 2.4rem;
  }
  .grid-container-2--cols {
    row-gap: 2.4rem;
  }
  /* mobile navigation for section features  */
  .btn-mobile-nav__tab {
    display: block;
  }
  .features-container {
    overflow: hidden;
  }
  .buttons-tab {
    top: 0;
    right: 0;
    width: 50%;
    height: 50%;
    background-color: rgba(255, 255, 255, 0.97);
    z-index: 9999;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    margin-top: 7.5rem;
    transition: 0.5s ease-in;
    transform: translateX(100%);
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    flex-direction: column;
    gap: 3rem;
  }
  .nav-open__tab .buttons-tab {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
    transform: translateX(0);
  }
  .nav-open__tab .btn-mobile-nav__tab ion-icon[name="close-outline"] {
    display: block;
  }
  .nav-open__tab .btn-mobile-nav__tab ion-icon[name="menu-outline"] {
    display: none;
  }
  .feature-active {
    padding-top: 0 !important;
  }
  .btn-change {
    text-align: center;
    border: none;
    background-color: #fff;
    color: #666;
    width: 100%;
    transition: all 0.4s;
    font-size: 1.8rem;
  }
  .btn-active {
    background-color: #fff !important;
    color: #333;
  }
  .btn-change:hover,
  .btn-change:active {
    color: #333;
    background-color: #fff !important;
  }
  /* mobile navigation gallery  */
  .gallery-grid {
    grid-template-columns: 4rem 3fr;
  }
  .text-sidebar {
    display: none;
  }
  .gallery-sidebar-list {
    background-color: #f2f5f9;

    position: absolute;
    top: 0;
    left: 0;
    width: 50%;
    height: 100vh;
    z-index: 9999;
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    display: none;
    transform: translateX(-100%);
    transition: all 0.5s ease-in;

    margin-top: 5rem;
  }
  .gallery-sidebar-list li p {
    color: #666;
  }
  .gallery-sidebar-list li.active .border-left {
    background-color: #f2f5f9;
    color: #333;
    /* border-left: 3px solid #666; */
  }

  .gallery-sidebar-list li.active .border-left {
    border-left-color: #333;
  }
  .gallery-sidebar-list li.active ul li p {
    background-color: #f2f5f9;
    color: #333;
    border-left: 3px solid #f2f5f9 !important;
    z-index: 9999;
  }
  .nav-open__gallery .gallery-sidebar-list {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
    transform: translateX(0);
    display: block;
  }

  .btn-mobile-nav__gallery {
    display: block;

    background-color: #f2f5f9;
    /* TODO:ISSUE TO BE FIXED */
    /* background-color: #eb7e7e; */
    padding-top: 1rem;
    padding-left: 1rem;
  }

  .nav-open__gallery .btn-mobile-nav__gallery ion-icon[name="close-outline"] {
    display: block;
  }
  .nav-open__gallery .btn-mobile-nav__gallery ion-icon[name="search-outline"] {
    display: none;
  }
}
@media (max-width: 21.875em) {
  .grid-container-sv {
    min-width: 35rem;
    max-width: 35rem;
    min-height: 45rem;
  }
  .img-box-pvc {
    width: 35rem;
    height: 35rem;
  }
  .img-box-pvc img {
    width: 35rem;
    height: 35rem;
  }
  .img-height-adjust {
    width: 35rem !important;
    height: 35rem !important;
  }
}

